tests/baselines/reference/asOperatorNames.errors.txt
tests/cases/conformance/expressions/asOperator/asOperatorNames.ts(2,9): error TS2352: Neither type 'number' nor type 'string' is assignable to the other.


==== tests/cases/conformance/expressions/asOperator/asOperatorNames.ts (1 errors) ====
    var a = 20;
    var b = a as string;
            ~~~~~~~~~~~
!!! error TS2352: Neither type 'number' nor type 'string' is assignable to the other.
    var as = "hello";
    var as1 = as as string;
    